Updated the real estate news ad chips to display titles correctly and to left align again.

--- a/styles/sass/helpers/_mixins-and-extends.scss
+++ b/styles/sass/helpers/_mixins-and-extends.scss
@@ -234,7 +234,7 @@
         clear: both;
 
         h1 {
-          font-size: /*120%*/18px;
+          font-size: 2em;
           font-weight: 500;
           text-align: left;
           padding: 0 0 0.5em 0;
@@ -275,6 +275,18 @@
     .adSlot {
       float: left;
       margin-right: 0px;
+
+      .detailsWrapper {
+        .detailsOverlay {
+          h1 {
+            font-size: 18px;
+
+            .priceSpan {
+              width: 40%;
+            }
+          }
+        }
+      }
     }
     .adSlot:first-child {
       float: left;
@@ -292,6 +304,18 @@
     .adSlot {
       float: left;
       margin-left: 30px;
+      
+      .detailsWrapper {
+        .detailsOverlay {
+          h1 {
+            font-size: 18px;
+
+            .priceSpan {
+              width: 40%;
+            }
+          }
+        }
+      }
     }
 
     a.adSlot:first-child{
